--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "jsx": "react-native",
+    "moduleResolution": "node",
+    "skipLibCheck": true,  // Ignora errores en librerías
+    "allowSyntheticDefaultImports": true  // Necesario para algunos módulos de React Native
+  },
+  "exclude": ["node_modules"]
+
 }
+
+
