--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.13.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
