--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.1",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
