--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/bottom-tabs": "^7.3.9",
-    "@react-navigation/drawer": "^7.3.8",
-    "@react-navigation/native": "^7.1.5",
-    "@react-navigation/native-stack": "^7.3.9",
-    "@react-navigation/stack": "^7.2.9",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/drawer": "^7.5.3",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.2",
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
@@ -22,10 +23,11 @@
     "react-native": "0.76.9",
     "react-native-indicators": "^0.17.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-paper": "^5.13.1",
+    "react-native-paper": "^5.14.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-tab-view": "^4.0.9",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
