--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/cli": "latest",
     "@react-native/gradle-plugin": "^0.75.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.3",
@@ -18,26 +19,26 @@
     "@react-navigation/native-stack": "^6.10.12",
     "@react-navigation/stack": "^6.3.20",
     "axios": "1.11.0",
-    "expo": "^52.0.47",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.28.0",
+    "expo": "^53.0.20",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-indicators": "^0.17.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-pager-view": "^6.9.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.13.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-reanimated": "~3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
   },
   "private": true
