--- a/package.json
+++ b/package.json
@@ -21,24 +21,27 @@
     "axios": "1.11.0",
     "expo": "^53.0.20",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-reanimated": "~3.17.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "metro-config": "^0.83.1",
     "typescript": "^5.3.3"
   },
   "private": true
