--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -23,7 +23,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -36,7 +36,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-splash-screen": "~0.30.10",
+    "expo-system-ui": "~5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
