--- a/package.json
+++ b/package.json
@@ -20,13 +20,21 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "1.11.0",
     "expo": "^53.0.20",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
+    "i18next": "^25.4.2",
+    "install": "^0.13.0",
+    "npm": "^11.5.2",
     "react": "19.0.0",
+    "react-i18next": "^15.7.2",
     "react-native": "0.79.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.5.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
@@ -36,9 +44,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-splash-screen": "~0.30.10",
-    "expo-system-ui": "~5.0.11"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
