--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
