--- a/app.json
+++ b/app.json
@@ -12,6 +12,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#0f340f"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.wimm",
