adding translations to toast's messages and changing keyoboard type when adding debts and credits

--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       }
     },
     "android": {
+      "debuggable": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/wimm-icon.png",
         "backgroundColor": "#0f340f"
