--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "latest",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/gradle-plugin": "^0.75.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.3",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^19.1.0",
     "axios": "1.11.0",
     "expo": "^53.0.22",
+    "expo-linear-gradient": "~14.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
