adding rotative JWT Auth

--- a/app.json
+++ b/app.json
@@ -48,6 +48,9 @@
     },
     "experiments": {
       "useNextStorageDirectory": false
-    }
+    },
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
