--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
