--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/cli": "latest",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/gradle-plugin": "^0.75.1",
@@ -19,51 +19,53 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.12",
     "@react-navigation/stack": "^6.3.20",
-    "@types/react-dom": "^19.1.0",
+    "@types/react-dom": "~19.1.7",
     "axios": "1.11.0",
-    "expo": "^53.0.22",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
+    "expo": "^54.0.2",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.9",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
     "i18next": "^25.4.2",
     "install": "^0.13.0",
     "npm": "^11.5.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^15.7.2",
-    "react-native": "^0.79.5",
+    "react-native": "0.81.4",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.5.2",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-tab-view": "^4.0.9",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "expo-secure-store": "~14.2.4"
+    "react-native-worklets": "0.5.1",
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/cli": "^0.24.20",
-    "@expo/metro-config": "^0.20.17",
-    "@types/react": "^19.0.10",
-    "metro": "0.82.5",
+    "@expo/metro-config": "~54.0.2",
+    "@types/react": "~19.1.10",
+    "metro": "^0.83.1",
     "metro-cache": "0.82.5",
     "metro-config": "0.82.5",
     "metro-core": "0.82.5",
     "metro-resolver": "0.82.5",
     "metro-transform-worker": "0.82.5",
-    "typescript": "^5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
